fixed incorrect album track alignment on small screens

--- a/src/css/01-base.css
+++ b/src/css/01-base.css
@@ -335,6 +335,8 @@ footer .copyright-copy, footer .copyright-last-year {
 
 .content-discography .album-tracks {
 	flex: auto;
+}
+.content-discography .album-tracks ol {
 	padding-left: 20px;
 	text-align: left;
 }
@@ -349,17 +351,15 @@ footer .copyright-copy, footer .copyright-last-year {
 	text-align: right;
 	width: 45px;
 }
-.content-discography .album-tracks .album-duration-container {
+.content-discography .album-tracks .album-duration-container ol {
 	margin: 0 0 10px 0;
 	text-align: right;
 }
-.content-discography .album-tracks .album-duration-container .album-duration-separator {
-	border-top: 1px solid;
-	margin-left: 37px;
-	padding: 6px 1px 0 0;
-}
 .content-discography .album-tracks .album-duration-container .album-duration-label {
-	margin-right: 5px;
+	border-top: 1px solid;
+	margin-left: 17px;
+	padding: 6px 1px 0 0;
+	text-align: right;
 }
 
 .content-discography .license-notice {padding: 0 10px;}
